--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "psr/http-server-middleware": "^1.0",
         "psr/http-server-handler": "^1.0",
         "monolog/monolog": "^2.1",
-        "symfony/var-dumper": "^5.1"
+        "symfony/var-dumper": "^5.1",
+        "nyholm/psr7-server": "^1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
