--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "psr/http-server-handler": "^1.0",
         "monolog/monolog": "^2.1",
         "symfony/var-dumper": "^5.1",
-        "nyholm/psr7-server": "^1.0"
+        "nyholm/psr7-server": "^1.0",
+        "nikic/fast-route": "^1.3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
