--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "monolog/monolog": "^2.1",
         "symfony/var-dumper": "^5.1",
         "nyholm/psr7-server": "^1.0",
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "vlucas/phpdotenv": "^5.2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
