--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "symfony/var-dumper": "^5.1",
         "nyholm/psr7-server": "^1.0",
         "nikic/fast-route": "^1.3",
-        "vlucas/phpdotenv": "^5.2"
+        "vlucas/phpdotenv": "^5.2",
+        "nette/http": "^3.0",
+        "twig/twig": "^3.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
